# omega-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure  configure-clang  run.sh
.github/workflows/: codeql-analysis.yml
omega/: config.h  events.h  game_base.h  main.cpp  main.h  resources.h  utils.h
omega/casino/: casino.cpp  casino.h
omega/casino/admin/: admin_chips.cpp  admin_chips.h
omega/casino/games/: blackjack.cpp  blackjack.h  fifty.cpp  fifty.h  games.h  slots.cpp  slots.h
omega/casino/objects/: game.h  objects.h  player.h
omega/commands/: PlayerFun.h  application.h  commands.h
omega/game_base/: GameListener.h  GamePlayer.h
omega/mafia/: abils.h  data.cpp  data.h  mafia.cpp  mafia.h  modifiers.h  omega_mafia.h  player.h  role.h  roles.cpp  roles.h  traits.h  wincons.h
omega/mafia/ai/: action.h  ai.cpp  ai.h
omega/mafia/command/: com.h
omega/mafia/manager/: memory_managed_vector.h  player_memory_manager.h
